# routes/reportRoutes.js
@@ -1,0 +1,8 @@
+const { Router } = require('express');
+const ctrl = require('../controllers/reportController');
+
+const router = Router();
+
+router.get('/monthly', ctrl.getMonthlyReport);
+
+module.exports = router;
